--- a/neuro-forge_front/index.html
+++ b/neuro-forge_front/index.html
@@ -7,6 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <script>
+      var global = global || window; // Define global if it's not already defined
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
